--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,7 +7,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -55,6 +54,7 @@ allow 107.189.13.251;
 allow 107.189.13.253;
 allow 107.189.13.254;
 allow 107.189.13.91;
+allow 107.189.14.106;
 allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.80;
@@ -152,7 +152,6 @@ allow 152.89.233.169;
 allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -209,6 +208,7 @@ allow 178.175.142.26;
 allow 178.175.148.209;
 allow 178.20.55.16;
 allow 178.20.55.182;
+allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.236.247.122;
@@ -219,6 +219,7 @@ allow 179.43.159.196;
 allow 179.43.159.197;
 allow 179.43.159.198;
 allow 179.43.159.199;
+allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.167.205;
@@ -263,6 +264,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -610,7 +612,6 @@ allow 192.42.116.220;
 allow 192.42.116.221;
 allow 192.42.116.23;
 allow 192.42.116.24;
-allow 192.42.116.25;
 allow 192.42.116.26;
 allow 192.42.116.27;
 allow 192.42.116.28;
@@ -619,7 +620,6 @@ allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.168.141.245;
-allow 193.187.255.165;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -715,6 +715,7 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
+allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
@@ -790,7 +791,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5520;
 allow 2001:67c:6ec:203:218:33ff:fe44:5522;
 allow 2001:67c:6ec:203:218:33ff:fe44:5523;
 allow 2001:67c:6ec:203:218:33ff:fe44:5524;
-allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
@@ -937,7 +937,6 @@ allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
-allow 209.141.59.116;
 allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.69.167.80;
@@ -1070,6 +1069,7 @@ allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
 allow 2605:6400:30:efb2::;
+allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 allow 2605:6400:30:f174::;
@@ -1353,7 +1353,6 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1371,6 +1370,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1379,6 +1379,7 @@ allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
+allow 2a07:5900::254;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -1602,7 +1603,6 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a11:840:6:1b::b3a1:6b14;
 allow 2a12:1e01::2;
-allow 2a12:3e80:2:29::;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:1733::2;
@@ -1620,6 +1620,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.226.39.36;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1637,7 +1638,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.205.167.139;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1708,6 +1708,7 @@ allow 45.95.202.48;
 allow 46.166.139.111;
 allow 46.182.21.248;
 allow 46.226.164.14;
+allow 46.234.47.105;
 allow 46.38.255.27;
 allow 46.41.150.103;
 allow 47.243.103.140;
@@ -1736,7 +1737,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1809,7 +1809,6 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.21.114;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
@@ -1830,7 +1829,6 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
-allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
@@ -1881,6 +1879,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.217.219.254;
 allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
