--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,6 +7,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -74,7 +75,6 @@ allow 107.189.3.249;
 allow 107.189.4.12;
 allow 107.189.4.158;
 allow 107.189.4.209;
-allow 107.189.4.76;
 allow 107.189.5.121;
 allow 107.189.5.18;
 allow 107.189.5.19;
@@ -198,8 +198,6 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 178.162.209.56;
-allow 178.17.170.184;
-allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.164;
 allow 178.17.174.198;
@@ -550,7 +548,7 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.147.251.136;
+allow 189.147.226.175;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -612,6 +610,7 @@ allow 192.42.116.220;
 allow 192.42.116.221;
 allow 192.42.116.23;
 allow 192.42.116.24;
+allow 192.42.116.25;
 allow 192.42.116.26;
 allow 192.42.116.27;
 allow 192.42.116.28;
@@ -791,6 +790,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5520;
 allow 2001:67c:6ec:203:218:33ff:fe44:5522;
 allow 2001:67c:6ec:203:218:33ff:fe44:5523;
 allow 2001:67c:6ec:203:218:33ff:fe44:5524;
+allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
@@ -933,10 +933,10 @@ allow 209.141.38.110;
 allow 209.141.39.104;
 allow 209.141.46.203;
 allow 209.141.50.178;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
+allow 209.141.59.116;
 allow 209.141.62.71;
 allow 212.21.66.6;
 allow 212.69.167.80;
@@ -1049,7 +1049,6 @@ allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:20:104e::2;
-allow 2605:6400:20:170c::1;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -1226,7 +1225,6 @@ allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
-allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
@@ -1234,8 +1232,6 @@ allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
-allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
@@ -1329,7 +1325,6 @@ allow 2a03:e600:100::70;
 allow 2a03:e600:100::71;
 allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
-allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
@@ -1353,6 +1348,7 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1620,7 +1616,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 34.226.39.36;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1638,6 +1633,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.222.58.222;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1751,7 +1747,6 @@ allow 5.255.125.41;
 allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
-allow 5.255.98.198;
 allow 5.255.98.23;
 allow 5.255.99.124;
 allow 5.255.99.147;
@@ -1829,6 +1824,7 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
@@ -1889,6 +1885,7 @@ allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.84.133;
+allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
