--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -339,6 +339,7 @@ allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
+allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
@@ -346,6 +347,7 @@ allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
+allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
@@ -480,7 +482,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
