--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -7,7 +7,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -127,6 +126,7 @@ allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
 allow 141.98.11.62;
+allow 142.171.211.123;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 143.42.110.237;
@@ -151,7 +151,6 @@ allow 152.89.233.169;
 allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -301,14 +300,6 @@ allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
 allow 185.220.100.243;
-allow 185.220.100.244;
-allow 185.220.100.245;
-allow 185.220.100.246;
-allow 185.220.100.247;
-allow 185.220.100.248;
-allow 185.220.100.249;
-allow 185.220.100.250;
-allow 185.220.100.251;
 allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
@@ -549,7 +540,6 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.147.224.34;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -664,7 +654,7 @@ allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
 allow 198.144.178.163;
-allow 198.167.206.236;
+allow 198.167.206.248;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -716,6 +706,7 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
+allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -1382,10 +1373,7 @@ allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
-allow 2a0b:f4c0:16c:11::1;
-allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
@@ -1393,11 +1381,6 @@ allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
-allow 2a0b:f4c0:16c:5::1;
-allow 2a0b:f4c0:16c:6::1;
-allow 2a0b:f4c0:16c:7::1;
-allow 2a0b:f4c0:16c:8::1;
-allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1654,7 +1637,6 @@ allow 45.141.215.114;
 allow 45.141.215.167;
 allow 45.141.215.169;
 allow 45.141.215.170;
-allow 45.141.215.200;
 allow 45.141.215.21;
 allow 45.141.215.56;
 allow 45.141.215.61;
@@ -1731,6 +1713,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.207.103.199;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.26;
@@ -1778,6 +1761,7 @@ allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
+allow 72.211.49.235;
 allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
@@ -1849,7 +1833,6 @@ allow 89.147.110.200;
 allow 89.147.110.202;
 allow 89.147.110.214;
 allow 89.147.110.82;
-allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
 allow 89.208.106.13;
@@ -1883,6 +1866,7 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.161;
 allow 92.205.129.119;
+allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.90.74.31;
@@ -1904,6 +1888,7 @@ allow 94.103.124.46;
 allow 94.103.124.90;
 allow 94.103.124.91;
 allow 94.103.124.98;
+allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.112.22;
