--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -23,6 +23,7 @@ set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:41d0:e:70c::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
+set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 set_real_ip_from 2001:620:20d0::19;
 set_real_ip_from 2001:620:20d0::20;
@@ -496,10 +497,7 @@ set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
-set_real_ip_from 2a0b:f4c0:16c:11::1;
-set_real_ip_from 2a0b:f4c0:16c:12::1;
 set_real_ip_from 2a0b:f4c0:16c:13::1;
 set_real_ip_from 2a0b:f4c0:16c:14::1;
 set_real_ip_from 2a0b:f4c0:16c:15::1;
@@ -507,11 +505,6 @@ set_real_ip_from 2a0b:f4c0:16c:16::1;
 set_real_ip_from 2a0b:f4c0:16c:2::1;
 set_real_ip_from 2a0b:f4c0:16c:3::1;
 set_real_ip_from 2a0b:f4c0:16c:4::1;
-set_real_ip_from 2a0b:f4c0:16c:5::1;
-set_real_ip_from 2a0b:f4c0:16c:6::1;
-set_real_ip_from 2a0b:f4c0:16c:7::1;
-set_real_ip_from 2a0b:f4c0:16c:8::1;
-set_real_ip_from 2a0b:f4c0:16c:9::1;
 set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
