Update lists at 20240418-1801

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -300,6 +300,14 @@ deny 185.220.100.240;
 deny 185.220.100.241;
 deny 185.220.100.242;
 deny 185.220.100.243;
+deny 185.220.100.244;
+deny 185.220.100.245;
+deny 185.220.100.246;
+deny 185.220.100.247;
+deny 185.220.100.248;
+deny 185.220.100.249;
+deny 185.220.100.250;
+deny 185.220.100.251;
 deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
@@ -540,6 +548,7 @@ deny 188.214.104.21;
 deny 188.68.41.191;
 deny 188.68.49.235;
 deny 188.68.52.231;
+deny 189.147.225.122;
 deny 190.103.179.98;
 deny 190.120.229.98;
 deny 190.211.254.97;
@@ -938,7 +947,6 @@ deny 213.95.149.22;
 deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
-deny 217.12.215.167;
 deny 217.12.221.131;
 deny 217.146.2.41;
 deny 23.137.248.100;
@@ -998,7 +1006,7 @@ deny 2.58.95.35;
 deny 2.58.95.38;
 deny 2600:3c00:e000:4ee::3;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
-deny 2600:3c03:e000:fa::3;
+deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e5::104;
@@ -1327,6 +1335,7 @@ deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:4b9e::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
+deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
@@ -1373,7 +1382,10 @@ deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
 deny 2a0b:f4c0:16c:15::1;
@@ -1381,6 +1393,11 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1616,6 +1633,7 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.254.131;
 deny 38.97.116.244;
+deny 44.199.101.225;
 deny 45.12.3.80;
 deny 45.128.232.151;
 deny 45.132.246.245;
@@ -1713,7 +1731,6 @@ deny 51.91.18.151;
 deny 5.196.73.12;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.207.103.199;
 deny 5.255.100.219;
 deny 5.255.100.224;
 deny 5.255.100.26;
@@ -1722,6 +1739,7 @@ deny 5.255.101.131;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.111.64;
+deny 5.255.114.171;
 deny 5.255.115.42;
 deny 5.255.115.58;
 deny 5.255.117.56;
@@ -1758,6 +1776,7 @@ deny 64.5.123.66;
 deny 66.146.193.33;
 deny 66.220.242.222;
 deny 67.219.109.141;
+deny 69.46.9.122;
 deny 71.19.144.106;
 deny 72.14.179.10;
 deny 72.167.47.69;
@@ -1802,7 +1821,7 @@ deny 82.221.131.71;
 deny 82.221.139.190;
 deny 82.68.49.227;
 deny 83.217.9.73;
-deny 83.26.17.129;
+deny 83.26.9.159;
 deny 83.96.213.63;
 deny 83.97.20.77;
 deny 84.16.224.227;
@@ -1868,6 +1887,7 @@ deny 92.119.126.161;
 deny 92.205.129.119;
 deny 92.243.24.163;
 deny 92.246.84.133;
+deny 92.249.48.135;
 deny 93.123.12.112;
 deny 93.90.74.31;
 deny 93.95.225.141;
@@ -1916,5 +1936,6 @@ deny 95.168.173.143;
 deny 95.211.210.103;
 deny 95.211.244.28;
 deny 96.27.198.133;
+deny 96.42.26.63;
 deny 96.66.15.152;
 deny 98.128.173.33;
