--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -300,6 +300,14 @@ allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
 allow 185.220.100.243;
+allow 185.220.100.244;
+allow 185.220.100.245;
+allow 185.220.100.246;
+allow 185.220.100.247;
+allow 185.220.100.248;
+allow 185.220.100.249;
+allow 185.220.100.250;
+allow 185.220.100.251;
 allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
@@ -540,6 +548,7 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 189.147.225.122;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -938,7 +947,6 @@ allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
-allow 217.12.215.167;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
@@ -998,7 +1006,7 @@ allow 2.58.95.35;
 allow 2.58.95.38;
 allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::3;
+allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
@@ -1327,6 +1335,7 @@ allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
@@ -1373,7 +1382,10 @@ allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
+allow 2a0b:f4c0:16c:11::1;
+allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
@@ -1381,6 +1393,11 @@ allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
+allow 2a0b:f4c0:16c:5::1;
+allow 2a0b:f4c0:16c:6::1;
+allow 2a0b:f4c0:16c:7::1;
+allow 2a0b:f4c0:16c:8::1;
+allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1616,6 +1633,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.199.101.225;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1713,7 +1731,6 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.207.103.199;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.26;
@@ -1722,6 +1739,7 @@ allow 5.255.101.131;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.111.64;
+allow 5.255.114.171;
 allow 5.255.115.42;
 allow 5.255.115.58;
 allow 5.255.117.56;
@@ -1758,6 +1776,7 @@ allow 64.5.123.66;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 67.219.109.141;
+allow 69.46.9.122;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
@@ -1802,7 +1821,7 @@ allow 82.221.131.71;
 allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.217.9.73;
-allow 83.26.17.129;
+allow 83.26.9.159;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
@@ -1868,6 +1887,7 @@ allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.84.133;
+allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
@@ -1916,5 +1936,6 @@ allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
 allow 96.27.198.133;
+allow 96.42.26.63;
 allow 96.66.15.152;
 allow 98.128.173.33;
