Update lists at 20240419-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -79,7 +79,6 @@ allow 107.189.5.121;
 allow 107.189.5.18;
 allow 107.189.5.19;
 allow 107.189.5.7;
-allow 107.189.5.80;
 allow 107.189.6.124;
 allow 107.189.7.114;
 allow 107.189.7.141;
@@ -717,7 +716,6 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
-allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -990,6 +988,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -1012,6 +1011,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:aabe::1;
@@ -1734,7 +1734,6 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.3.38.19;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.26;
@@ -1775,6 +1774,7 @@ allow 5.61.51.143;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
+allow 63.141.251.170;
 allow 64.227.115.78;
 allow 64.5.123.66;
 allow 66.146.193.33;
@@ -1856,7 +1856,6 @@ allow 89.147.110.200;
 allow 89.147.110.202;
 allow 89.147.110.214;
 allow 89.147.110.82;
-allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.185.85.140;
 allow 89.208.106.13;
@@ -1892,8 +1891,8 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.161;
 allow 92.205.129.119;
-allow 92.243.24.163;
 allow 92.246.84.133;
+allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
