--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -79,7 +79,6 @@ deny 107.189.5.121;
 deny 107.189.5.18;
 deny 107.189.5.19;
 deny 107.189.5.7;
-deny 107.189.5.80;
 deny 107.189.6.124;
 deny 107.189.7.114;
 deny 107.189.7.141;
@@ -717,7 +716,6 @@ deny 2001:41d0:a:fe22::1;
 deny 2001:41d0:e:70c::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
-deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
@@ -990,6 +988,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.239;
 deny 23.94.211.25;
@@ -1012,6 +1011,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::1;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:aabe::1;
@@ -1734,7 +1734,6 @@ deny 51.91.18.151;
 deny 5.196.73.12;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.3.38.19;
 deny 5.255.100.219;
 deny 5.255.100.224;
 deny 5.255.100.26;
@@ -1775,6 +1774,7 @@ deny 5.61.51.143;
 deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.83.179;
+deny 63.141.251.170;
 deny 64.227.115.78;
 deny 64.5.123.66;
 deny 66.146.193.33;
@@ -1856,7 +1856,6 @@ deny 89.147.110.200;
 deny 89.147.110.202;
 deny 89.147.110.214;
 deny 89.147.110.82;
-deny 89.147.111.124;
 deny 89.147.111.87;
 deny 89.185.85.140;
 deny 89.208.106.13;
@@ -1892,8 +1891,8 @@ deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.119.126.161;
 deny 92.205.129.119;
-deny 92.243.24.163;
 deny 92.246.84.133;
+deny 92.249.48.135;
 deny 93.123.12.112;
 deny 93.90.74.31;
 deny 93.95.225.141;
