--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -245,16 +245,11 @@ allow 185.107.70.56;
 allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.126.117.21;
-allow 185.129.61.1;
 allow 185.129.61.10;
-allow 185.129.61.2;
 allow 185.129.61.3;
 allow 185.129.61.4;
-allow 185.129.61.5;
 allow 185.129.61.6;
-allow 185.129.61.7;
 allow 185.129.61.8;
-allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.44.108;
@@ -664,7 +659,7 @@ allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
 allow 198.144.178.163;
-allow 198.167.206.248;
+allow 198.167.206.135;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -716,6 +711,7 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
+allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -794,16 +790,11 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
-allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
-allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
 allow 2001:67c:89c:702:1ce:1ce:babe:4;
-allow 2001:67c:89c:702:1ce:1ce:babe:5;
 allow 2001:67c:89c:702:1ce:1ce:babe:6;
-allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
-allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
@@ -814,7 +805,6 @@ allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
 allow 202.61.226.98;
-allow 202.61.252.121;
 allow 202.69.76.36;
 allow 204.137.14.104;
 allow 204.137.14.105;
@@ -823,7 +813,6 @@ allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.8.156.142;
 allow 204.85.191.7;
-allow 204.85.191.8;
 allow 204.85.191.9;
 allow 204.8.96.100;
 allow 204.8.96.101;
@@ -927,7 +916,6 @@ allow 205.185.121.170;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
-allow 206.237.98.52;
 allow 209.141.32.198;
 allow 209.141.38.110;
 allow 209.141.39.104;
@@ -1273,8 +1261,6 @@ allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
-allow 2a03:4000:55:efb::1003;
-allow 2a03:4000:55:efb::a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -1619,6 +1605,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.215.41.129;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1707,7 +1694,6 @@ allow 46.182.21.248;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
-allow 46.246.34.52;
 allow 46.38.255.27;
 allow 46.41.150.103;
 allow 47.243.103.140;
@@ -1746,6 +1732,7 @@ allow 5.255.114.171;
 allow 5.255.115.42;
 allow 5.255.115.58;
 allow 5.255.117.56;
+allow 5.255.118.244;
 allow 5.255.124.150;
 allow 5.255.125.196;
 allow 5.255.125.41;
@@ -1891,6 +1878,7 @@ allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.161;
 allow 92.205.129.119;
+allow 92.243.24.163;
 allow 92.246.84.133;
 allow 92.249.48.135;
 allow 93.123.12.112;
