Update lists at 20240419-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -80,6 +80,7 @@ allow 107.189.5.18;
 allow 107.189.5.19;
 allow 107.189.5.7;
 allow 107.189.6.124;
+allow 107.189.6.57;
 allow 107.189.7.114;
 allow 107.189.7.141;
 allow 107.189.7.144;
@@ -245,11 +246,16 @@ allow 185.107.70.56;
 allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.126.117.21;
+allow 185.129.61.1;
 allow 185.129.61.10;
+allow 185.129.61.2;
 allow 185.129.61.3;
 allow 185.129.61.4;
+allow 185.129.61.5;
 allow 185.129.61.6;
+allow 185.129.61.7;
 allow 185.129.61.8;
+allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.44.108;
@@ -622,7 +628,6 @@ allow 193.189.100.197;
 allow 193.189.100.198;
 allow 193.189.100.199;
 allow 193.189.100.200;
-allow 193.189.100.201;
 allow 193.189.100.202;
 allow 193.189.100.203;
 allow 193.189.100.204;
@@ -669,7 +674,6 @@ allow 198.46.166.157;
 allow 198.50.128.237;
 allow 198.58.107.53;
 allow 198.96.155.3;
-allow 198.98.48.192;
 allow 198.98.48.20;
 allow 198.98.48.33;
 allow 198.98.50.199;
@@ -790,11 +794,16 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
+allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
+allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
 allow 2001:67c:89c:702:1ce:1ce:babe:4;
+allow 2001:67c:89c:702:1ce:1ce:babe:5;
 allow 2001:67c:89c:702:1ce:1ce:babe:6;
+allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
+allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
@@ -805,6 +814,7 @@ allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
 allow 202.61.226.98;
+allow 202.61.252.121;
 allow 202.69.76.36;
 allow 204.137.14.104;
 allow 204.137.14.105;
@@ -813,6 +823,7 @@ allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.8.156.142;
 allow 204.85.191.7;
+allow 204.85.191.8;
 allow 204.85.191.9;
 allow 204.8.96.100;
 allow 204.8.96.101;
@@ -916,6 +927,7 @@ allow 205.185.121.170;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
+allow 206.237.98.52;
 allow 209.141.32.198;
 allow 209.141.38.110;
 allow 209.141.39.104;
@@ -935,8 +947,8 @@ allow 213.156.142.30;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
-allow 216.73.159.101;
 allow 216.73.159.75;
+allow 217.12.215.167;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
@@ -1093,6 +1105,7 @@ allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f6b7::1337;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
+allow 2605:6400:30:f763::2;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
@@ -1261,6 +1274,8 @@ allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
+allow 2a03:4000:55:efb::1003;
+allow 2a03:4000:55:efb::a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -1364,7 +1379,6 @@ allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
-allow 2a07:5900::253;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -1572,7 +1586,6 @@ allow 2a0f:df00:0:255::197;
 allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
-allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
@@ -1605,10 +1618,9 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.215.41.129;
+allow 3.221.174.59;
 allow 35.0.127.52;
 allow 35.240.241.135;
-allow 3.67.194.114;
 allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
@@ -1761,7 +1773,6 @@ allow 5.61.51.143;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
-allow 63.141.251.170;
 allow 64.227.115.78;
 allow 64.5.123.66;
 allow 66.146.193.33;
@@ -1870,7 +1881,6 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
-allow 91.217.219.253;
 allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
