--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -102,11 +102,16 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5525;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
 deny 2001:67c:6ec:203:218:33ff:fe44:5528;
+deny 2001:67c:89c:702:1ce:1ce:babe:1;
 deny 2001:67c:89c:702:1ce:1ce:babe:10;
+deny 2001:67c:89c:702:1ce:1ce:babe:2;
 deny 2001:67c:89c:702:1ce:1ce:babe:3;
 deny 2001:67c:89c:702:1ce:1ce:babe:4;
+deny 2001:67c:89c:702:1ce:1ce:babe:5;
 deny 2001:67c:89c:702:1ce:1ce:babe:6;
+deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
+deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
@@ -216,6 +221,7 @@ deny 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
 deny 2605:6400:30:f6b7::1337;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
+deny 2605:6400:30:f763::2;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7ca::2;
@@ -383,6 +389,8 @@ deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
 deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
+deny 2a03:4000:55:efb::1003;
+deny 2a03:4000:55:efb::a;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 deny 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 deny 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -486,7 +494,6 @@ deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
-deny 2a07:5900::253;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
@@ -694,7 +701,6 @@ deny 2a0f:df00:0:255::197;
 deny 2a0f:df00:0:255::198;
 deny 2a0f:df00:0:255::199;
 deny 2a0f:df00:0:255::200;
-deny 2a0f:df00:0:255::201;
 deny 2a0f:df00:0:255::202;
 deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
