Update lists at 20240420-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -152,6 +152,7 @@ allow 152.89.233.169;
 allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -538,7 +539,6 @@ allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
-allow 185.81.115.120;
 allow 185.82.219.109;
 allow 185.84.31.254;
 allow 185.86.148.90;
@@ -1603,6 +1603,7 @@ allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a11:840:6:1b::b3a1:6b14;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
+allow 2a12:5940:144f::2;
 allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
@@ -1614,7 +1615,6 @@ allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
-allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
 allow 35.0.127.52;
@@ -1631,9 +1631,9 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 3.82.255.82;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.214.11.191;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1725,6 +1725,7 @@ allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
 allow 5.181.80.107;
+allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.73.12;
@@ -1799,9 +1800,9 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.204.248;
 allow 79.124.8.241;
 allow 79.137.198.213;
+allow 79.26.168.170;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1869,6 +1870,7 @@ allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
+allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
@@ -1885,7 +1887,6 @@ allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.84.133;
-allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
